--- a/titanic.ipynb
+++ b/titanic.ipynb
@@ -2,11 +2,316 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "98f2745b",
+   "execution_count": 1,
+   "id": "5478a398",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pandas in c:\\python_projects\\titanic\\venv\\lib\\site-packages (1.3.1)\n",
+      "Requirement already satisfied: numpy>=1.17.3 in c:\\python_projects\\titanic\\venv\\lib\\site-packages (from pandas) (1.21.1)\n",
+      "Requirement already satisfied: python-dateutil>=2.7.3 in c:\\python_projects\\titanic\\venv\\lib\\site-packages (from pandas) (2.8.2)\n",
+      "Requirement already satisfied: pytz>=2017.3 in c:\\python_projects\\titanic\\venv\\lib\\site-packages (from pandas) (2021.1)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\python_projects\\titanic\\venv\\lib\\site-packages (from python-dateutil>=2.7.3->pandas) (1.16.0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: You are using pip version 19.2.3, however version 21.2.3 is available.\n",
+      "You should consider upgrading via the 'python -m pip install --upgrade pip' command.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: numpy in c:\\python_projects\\titanic\\venv\\lib\\site-packages (1.21.1)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: You are using pip version 19.2.3, however version 21.2.3 is available.\n",
+      "You should consider upgrading via the 'python -m pip install --upgrade pip' command.\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install pandas\n",
+    "!pip install numpy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "39ec46ea",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f68f83d",
+   "metadata": {},
+   "source": [
+    "## 1. Load data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "3c2bf45f",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Cabin</th>\n",
+       "      <th>Embarked</th>\n",
+       "      <th>Fare</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Parch</th>\n",
+       "      <th>PassengerId</th>\n",
+       "      <th>Pclass</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>SibSp</th>\n",
+       "      <th>Survived</th>\n",
+       "      <th>Ticket</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>22.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "      <td>7.2500</td>\n",
+       "      <td>Braund, Mr. Owen Harris</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>male</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>A/5 21171</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>38.0</td>\n",
+       "      <td>C85</td>\n",
+       "      <td>C</td>\n",
+       "      <td>71.2833</td>\n",
+       "      <td>Cumings, Mrs. John Bradley (Florence Briggs Th...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>female</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>PC 17599</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>26.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "      <td>7.9250</td>\n",
+       "      <td>Heikkinen, Miss. Laina</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>female</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>STON/O2. 3101282</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>35.0</td>\n",
+       "      <td>C123</td>\n",
+       "      <td>S</td>\n",
+       "      <td>53.1000</td>\n",
+       "      <td>Futrelle, Mrs. Jacques Heath (Lily May Peel)</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>female</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>113803</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>35.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "      <td>8.0500</td>\n",
+       "      <td>Allen, Mr. William Henry</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>male</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>373450</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Age Cabin Embarked     Fare  \\\n",
+       "0  22.0   NaN        S   7.2500   \n",
+       "1  38.0   C85        C  71.2833   \n",
+       "2  26.0   NaN        S   7.9250   \n",
+       "3  35.0  C123        S  53.1000   \n",
+       "4  35.0   NaN        S   8.0500   \n",
+       "\n",
+       "                                                Name  Parch  PassengerId  \\\n",
+       "0                            Braund, Mr. Owen Harris      0            1   \n",
+       "1  Cumings, Mrs. John Bradley (Florence Briggs Th...      0            2   \n",
+       "2                             Heikkinen, Miss. Laina      0            3   \n",
+       "3       Futrelle, Mrs. Jacques Heath (Lily May Peel)      0            4   \n",
+       "4                           Allen, Mr. William Henry      0            5   \n",
+       "\n",
+       "   Pclass     Sex  SibSp  Survived            Ticket  \n",
+       "0       3    male      1       0.0         A/5 21171  \n",
+       "1       1  female      1       1.0          PC 17599  \n",
+       "2       3  female      0       1.0  STON/O2. 3101282  \n",
+       "3       1  female      1       1.0            113803  \n",
+       "4       3    male      0       0.0            373450  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "train_data = pd.read_csv(r\"data\\train.csv\")\n",
+    "test_data = pd.read_csv(r\"data\\test.csv\")\n",
+    "\n",
+    "df_all = pd.concat([train_data, test_data], sort=True).reset_index(drop=True)\n",
+    "display(df_all[:5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "87f1df41",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train_data contains: 891rows\n",
+      "Test_data contains: 418rows\n",
+      "Dataset has: 11 features \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Train_data contains: \" + str(train_data.shape[0]) + \"rows\")\n",
+    "print(\"Test_data contains: \" + str(test_data.shape[0]) + \"rows\")\n",
+    "\n",
+    "print(\"Dataset has: \" + str(test_data.shape[1]) + \" features \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "fef24a66",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Missings in train_data\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "PassengerId      0\n",
+       "Survived         0\n",
+       "Pclass           0\n",
+       "Name             0\n",
+       "Sex              0\n",
+       "Age            177\n",
+       "SibSp            0\n",
+       "Parch            0\n",
+       "Ticket           0\n",
+       "Fare             0\n",
+       "Cabin          687\n",
+       "Embarked         2\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(\"Missings in train_data\")\n",
+    "train_data.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a96a1e6",
+   "metadata": {},
+   "source": [
+    "## 2. Data preprocessing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f0a34e30",
+   "metadata": {},
+   "source": [
+    "### 2.1 Age"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40298df7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_all.groupby(\"\")"
+   ]
   }
  ],
  "metadata": {
